crates/next-custom-transforms/tests/errors/server-actions/server-graph/21/output.js
'use server';
export async function fn() {}
